--- a/frontend/yield.html
+++ b/frontend/yield.html
@@ -397,6 +397,7 @@ let product_unique_id = "MDJRU47583JUurheu938";
             await join_yield({
                 title: post.title,
                 content: post.content,
+                image_url: post.image_url,
                 author: post.author,
                 date: post.date,
                 others: JSON.stringify({
