--- a/frontend/user_yield.html
+++ b/frontend/user_yield.html
@@ -281,8 +281,8 @@
         <nav>
             <a href="javascript:void(0);" onclick="navigateWithParams('wallet.html')">Wallet</a>
             <a href="javascript:void(0);" onclick="navigateWithParams('yield.html')">Yield</a>
-            <a href="javascript:void(0);" onclick="navigateWithParams('user_yield.html')">User Yield</a>
-            <a href="javascript:void(0);" onclick="navigateWithParams('dapps.html')" class="active">DApps</a>
+            <a href="javascript:void(0);" onclick="navigateWithParams('user_yield.html')" class="active">User Yield</a>
+            <a href="javascript:void(0);" onclick="navigateWithParams('dapps.html')">DApps</a>
         </nav>
     </header>
 
