--- a/frontend/dapps.html
+++ b/frontend/dapps.html
@@ -25,6 +25,7 @@
             width: 100%;
             box-shadow: 0px 0px 20px rgba(0, 255, 204, 0.5);
             text-align: center;
+            margin-top: 120px;
         }
         h1 {
             color: #00ffcc;
@@ -174,8 +175,9 @@
         }
 
         .logo {
-            height: 40px;
+            height: 50px;
             width: auto;
+            padding: 7px;
         }
 
         nav {
@@ -189,7 +191,7 @@
             margin: 0 15px;
             font-weight: bold;
             transition: color 0.3s ease;
-            padding: 12px;
+            padding: 5px;
         }
 
         nav a:hover {
@@ -220,13 +222,13 @@
             }
 
             .container {
-                margin-top: 150px; /* Adjust for header height on smaller screens */
+                margin-top: 30px; /* Adjust for header height on smaller screens */
             }
         }
 
         @media (max-width: 480px) {
             nav {
-                flex-direction: column;
+                /* flex-direction: column; */
                 align-items: center;
             }
 
@@ -235,7 +237,7 @@
             }
 
             .container {
-                margin-top: 200px; /* Adjust for header height on very small screens */
+                margin-top: 34px; /* Adjust for header height on very small screens */
             }
         }
     </style>
@@ -253,9 +255,9 @@
         </nav>
     </header>
 
-
+    <br/>
     <div class="container">
-        <h1>DAO/DeFi Apps</h1>
+        <h1>DApps</h1>
         <div id="categories"></div>
         <button class="add-button" onclick="showAddForm()">Add App</button>
     </div>
