improving the pages.

--- a/frontend/success.html
+++ b/frontend/success.html
@@ -104,7 +104,7 @@
 
                 if (timeLeft <= 0) {
                     clearInterval(interval);
-                    window.location.href = "your-redirect-url.html"; // Change this to your desired page
+                    window.location.href = "index.html"; // Change this to your desired page
                 }
             }, 1000);
         }
