--- a/frontend/wallet.html
+++ b/frontend/wallet.html
@@ -414,7 +414,7 @@
         <h3>Your SOL balance is 0</h3>
         <p>You can top-up your SOL using the bridge or buy SOL directly with your card.</p>
         <button onclick="openWithWalletAddress('https://bridge.sonic.game/')">Use Bridge</button>
-        <button onclick="openWithWalletAddress(`https://roynek.com/SolPayWay/pay.html?network=devnet&amount=&token=sol&receiver=AAFW4kLEuUWwVhUXdQ3QiS7UEBbDRHiztXstsf4jwGJ4&description=You%20are%20bought%20to%20pay%20for%20Sonic%20SVM's%20Sol%2C%20You%20can%20pay%20with%20your%20Card%20or%20with%20Sol%20on%20the%20Solana%20Devnet.&bgColor=121212&textColor=ffffff&buttonColor=39d0d8&logoUrl=https%3A%2F%2Froynek.com%2Fsonicvault512%2Ffrontend%2Fsrc%2Flogo.webp&successUrl=https%3A%2F%2Froynek.com%2Fsonicvault512%2Ffrontend%2Fsuccess.html&cancelUrl=https%3A%2F%2Froynek.com%2Fsonicvault512%2Ffrontend%2Ferror.html`)">Buy SOL(Devnet)</button>
+        <button onclick="openWithWalletAddress(`https://roynek.com/SolPayWay/pay.html?network=devnet&token=sol&receiver=AAFW4kLEuUWwVhUXdQ3QiS7UEBbDRHiztXstsf4jwGJ4&description=You%20are%20bought%20to%20pay%20for%20Sonic%20SVM's%20Sol%2C%20You%20can%20pay%20with%20your%20Card%20or%20with%20Sol%20on%20the%20Solana%20Devnet.&bgColor=121212&textColor=ffffff&buttonColor=39d0d8&logoUrl=https%3A%2F%2Froynek.com%2Fsonicvault512%2Ffrontend%2Fsrc%2Flogo.webp&successUrl=https%3A%2F%2Froynek.com%2Fsonicvault512%2Ffrontend%2Fsuccess.html&cancelUrl=https%3A%2F%2Froynek.com%2Fsonicvault512%2Ffrontend%2Ferror.html`)">Buy SOL(Devnet)</button>
         <button onclick="closePopup()">Close</button>
     </div>
     
