--- a/frontend/success.html
+++ b/frontend/success.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Payment Successful</title>
+    <script src="js/solana-web3.js"></script>
     <style>
         body {
             display: flex;
