--- a/frontend/dapps.html
+++ b/frontend/dapps.html
@@ -248,7 +248,7 @@
     <header>
         <img src="src/logo.webp" alt="SonicVault512 Logo" class="logo">
         <nav>
-            <a href="javascript:void(0);" onclick="navigateWithParams('wallet.html')">Wallet</a>
+            <a href="javascript:void(0);" onclick="navigateWithParams('index.html')">Wallet</a>
             <a href="javascript:void(0);" onclick="navigateWithParams('yield.html')">Yield</a>
             <a href="javascript:void(0);" onclick="navigateWithParams('user_yield.html')">User Yield</a>
             <a href="javascript:void(0);" onclick="navigateWithParams('dapps.html')" class="active">DApps</a>
