--- a/frontend/yield.html
+++ b/frontend/yield.html
@@ -240,7 +240,7 @@
     <header>
         <img src="src/logo.webp" alt="SonicVault512 Logo" class="logo">
         <nav>
-            <a href="javascript:void(0);" onclick="navigateWithParams('wallet.html')">Wallet</a>
+            <a href="javascript:void(0);" onclick="navigateWithParams('index.html')">Wallet</a>
             <a href="javascript:void(0);" onclick="navigateWithParams('yield.html')" class="active">Yield</a>
             <a href="javascript:void(0);" onclick="navigateWithParams('user_yield.html')">User Yield</a>
             <a href="javascript:void(0);" onclick="navigateWithParams('dapps.html')">DApps</a>
