--- a/frontend/index.html
+++ b/frontend/index.html
@@ -522,11 +522,12 @@
             </button>
             
             <label for="uploadKey" class="wallet-btn upload-btn">
-                <span class="icon">
+                <span class="icon">+</span> 
+                <!-- <span class="icon">
                     <svg viewBox="0 0 24 24" width="18" height="18">
                         <path fill="currentColor" d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z" />
                     </svg>
-                </span>
+                </span> -->
                 Upload Key
                 <input type="file" id="uploadKey" onchange="loadPrivateKeyFile(event)">
             </label>
